<resources>
    <string name="app_name" translatable="false">MCF 311</string>
    <string name="google_maps_API_key" translatable="false">AIzaSyBvpxVA9-uvAVRHV7UPUzlzcTFK3Mgy-V0</string>
    <string name="google_maps_API_key1" translatable="false">AIzaSyCJgkfl9UIwMlfbosfscgvBKbAfUSd41No</string>
    <string name="register" translatable="false">Register</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="first_name" translatable="false"><i>First Name</i></string>
    <string name="last_name" translatable="false"><i>Last Name</i></string>
    <string name="update_your_profile" translatable="false"><i>update your profile</i></string>
    <string name="email_or_phone" translatable="false"><i>Username(E-mail or Mobile No.)</i></string>
    <string name="password" translatable="false"><i>Password</i></string>
    <string name="confirm_password" translatable="false"><i>Confirm New Password</i></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">314061989439170</string>
    <string name="please_wait_dialog_text" translatable="false"><i>Please hold on…</i></string>
    <string name="nav_notifications" translatable="false">Notifications</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="image_capture_text" translatable="false"><i><b>CAPTURE</b> an image\nOR\nSelect an image from <b>GALLERY</b></i></string>
    <string name="select_a_cat" translatable="false">Select a category</string>
    <string name="complaint_address" translatable="false">Complaint Address</string>
    <string name="complaint_description" translatable="false">Complaint Description</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="forgot_pwd" translatable="false">Forgot Password?</string>
    <string name="register_now" translatable="false">Register Now</string>
    <string name="connect_via" translatable="false">or connect via</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="bottom_nav_helpline" translatable="false">Help Line</string>
    <string name="bottom_nav_news_and_updates" translatable="false">News &amp; Upd.</string>
    <string name="search" translatable="false">Search</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="comp_image" translatable="false">Complaint Image</string>
    <string name="comp_num" translatable="false">Complaint #</string>
    <string name="comp_date_time" translatable="false">Date-Time:</string>
    <string name="comp_status" translatable="false">Complaint Status:</string>
    <string name="comp_category" translatable="false">Category:</string>
    <string name="comp_address" translatable="false">Address:</string>
    <string name="fa_comments" translatable="false">f086</string>
    <string name="fa_history" translatable="false">f1da</string>
    <string name="fa_user" translatable="false">f2bd</string>
    <string name="fa_date_time" translatable="false">f017</string>
    <string name="geo_info_text" translatable="false">Geo Location Data</string>
    <string name="new_password" translatable="false"><i>Create New Password</i></string>
    <string name="login_facebook_text" translatable="false">Facebook</string>
    <string name="login_google_text" translatable="false">Google</string>
    <string name="mobile_num_digits_text" translatable="false"><i>Must be of 10 digits !</i></string>
    <string name="email_example" translatable="false"><i>user@example.com</i></string>
    <string name="three_hundred_letters_text" translatable="false"><i>You have 300 letters </i></string>
    <string name="two_hundred_letters_text" translatable="false"><i>Not more than 200 letters !</i></string>
    <string name="select_category_text" translatable="false"><i>Click here to select a Category</i></string>
    <string name="geo_address_text" translatable="false"><i>Your Geo Address</i></string>
    <string name="your_mob_num" translatable="false"><i>Your Mobile Number</i></string>
    <string name="update" translatable="false">Update</string>
    <string name="feedback_image" translatable="false">Feedback Image</string>
    <string name="locked" translatable="false">Locked</string>
    <string name="please_scan_qr_code" translatable="false">Please Scan QR Code Below</string>
    <string name="please_type_ndn_code" translatable="false">Please Type NDDN Code below</string>
    <string name="type_ndn_code" translatable="false">Type NDDN Code</string>
    <string name="clean_bin" translatable="false">Clean Bin</string>
    <string name="GoodBehaviour" translatable="false">Good Behaviour</string>
    <string name="SatisfactionRating" translatable="false">Satisfaction Rating</string>
    <string name="SegregateBinNotused" translatable="false">Segregate Bin Not used</string>
    <string name="BadBehaviour" translatable="false">Bad Behaviour</string>
    <string name="NotSupportive" translatable="false">Not Supportive</string>
    <string name="Selectanyone" translatable="false">Select any one</string>
    <string name="GiveYourFeedback" translatable="false">Give Your Feedback</string>
    <string name="or" translatable="false">OR</string>
    <string name="old_password" translatable="false">Old Password</string>
    <string name="dob" translatable="false"><i>Date of birth</i></string>
    <string name="edit_photo" translatable="false">Edit Photo</string>
    <string name="Username" translatable="false">Username</string>
    <string name="AlternateMobileNumber" translatable="false">Alternate Mobile Number</string>
    <string name="Dateofbirth" translatable="false">Date of birth</string>
    <string name="Whatsyourgender" translatable="false">What your gender ?</string>
    <string name="yourchoiceyourusername" translatable="false">Your choice, your username !</string>
    <string name="yourfirstnameismendatory" translatable="false">Your first name is mandatory !</string>
    <string name="doyouhaveanylastname" translatable="false">Do you have any last name ?</string>
    <string name="weknowyourhatespams" translatable="false">We know, you hate spams, so please calm !</string>
    <string name="alsowedontdisturbyou" translatable="false">Also, we do not disturb you !</string>
    <string name="itsonyouanothermobileno" translatable="false">Its on you, another mobile number !</string>
    <string name="Yourhappybirthday" translatable="false">Your happy birthday !</string>
    <string name="edit_password" translatable="false">Edit Password</string>
    <string name="alternate_mobile" translatable="false"><i>Alternate Mobile Number</i></string>
    <string name="re_enter_password" translatable="false">Re-enter New Password</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="email_address" translatable="false"><i>Your E-mail Address</i></string>
    <string name="complaint_duration" translatable="false">Complaint Duration</string>
    <string name="complaint" translatable="false">Complaint</string>
    <string name="add_comment" translatable="false"><i>Add a comment</i></string>
    <string name="Information" translatable="false">information</string>
    <string name="info_text_first_login" translatable="false">First, you have to completely fill required profile details to use this application.</string>
    <string name="not_now" translatable="false">not now</string>
    <string name="sure" translatable="false">sure !</string>
    <string name="ok" translatable="false">ok</string>
    <string name="yes" translatable="false">yes</string>
    <string name="info_text_logout" translatable="false">Do you really want to Logout ?</string>
    <string name="success" translatable="false">Success</string>
    <string name="login" translatable="false">Login</string>
    <string name="text_all_fields_mandatory" translatable="false"><u>Mandatory Fields* </u></string>
    <string name="no_results_found" translatable="false">no results found !!!</string>
    <string name="dashboard_con" translatable="false">Faridabad Municipal Council</string>
    <string name="text_link_company_title" translatable="false">Manacle Technologies Pvt. Ltd.</string>
    <string name="version_name" translatable="false">1.0</string>
    <string name="text_copyright" translatable="false">Copyright © 2018, All Rights Reserved</string>
    <string name="loading_dialog_msg" translatable="false">Loading, please wait\u002e\u002e\u002e\u002e\u002e</string>
    <string name="forgotpassword" translatable="false">FORGOT PASSWORD ?</string>
    <string name="enteryn" translatable="false">Enter your username</string>
    <string name="enter_mob" translatable="false">Enter your mobile number</string>
    <string name="user_not_exist" translatable="false">User does not exist or not \nactivated !!!</string>
    <string name="change_password" translatable="false">Change password successfully !</string>
    <string name="where_you_want" translatable="false">WHERE DO YOU WANT THE OTP ?</string>
    <string name="otp_con" translatable="false">If you want the OTP through SMS,then choose SMS or through email,then choose email
    and enter field accordingly.</string>
    <string name="fdp_content" translatable="false">To reset your account password,enter the username then click on
    next for next process.</string>
    <string name="otp" translatable="false">OTP</string>
    <string name="viasms" translatable="false">via SMS</string>
    <string name="viaemail" translatable="false">via EMAIL</string>
    <string name="next" translatable="false">Next</string>
    <string name="reset_password" translatable="false">RESET PASSWORD !!!</string>
    <string name="reset_password_con" translatable="false">Reset you new password from here.</string>
    <string name="resend_code_con" translatable="false">RESEND CODE</string>
    <string name="ent_p_otp" translatable="false">Enter password</string>
    <string name="re_ent_p_otp" translatable="false">Re-enter password</string>
    <string name="otp_content" translatable="false">Please type the verification code sent to your mobile or email.</string>
    <string name="from_hint" translatable="false">From</string>
    <string name="to_hint" translatable="false">To</string>
    <string name="current_location" translatable="false">Current Location</string>
    <string name="destination" translatable="false">Destination</string>
    <string name="crop" translatable="false">Crop</string>
    <string name="complaint_image" translatable="false">Complaint Image</string>
    <string name="brower_chooser" translatable="false">Select Open with !</string>
    <string name="swipe_to_refresh" translatable="false">Swipe Down to Refresh</string>
    <string name="con" translatable="false">Continue</string>
    <string name="loginorregister" translatable="false">login or register</string>
    <string name="timer" translatable="false">00:59</string>
    <string name="notification_title" translatable="false">Title</string>
    <string name="notification_date_time" translatable="false">date time</string>
    <string name="EmailAdd" translatable="false">E-Mail Address</string>
    <string name="m_no" translatable="false">Mobile Number</string>
    <string name="write_feedback1" translatable="false">Write Feedback(*)</string>
    <string name="version_update" translatable="false">Update Available</string>
    <string name="update_brief_text" translatable="false">An updated version of this app is available ,  Please update now</string>
</resources>