<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="101"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="102"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/date_filter"
        android:icon="@drawable/baseline_filter_list"
        android:orderInCategory="104"
        android:visible="false"
        android:title="Date Filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notification"
        app:actionLayout="@layout/layout_badge_menu"
        android:icon="@drawable/ic_notifications_24dp"
        android:orderInCategory="103"
        android:title="@string/nav_notifications"
        app:showAsAction="ifRoom" />
</menu>
