<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:layout_margin="@dimen/margin_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_update"
        android:textColor="@color/colorDarkGrey"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/update_brief_text"
        android:textColor="@color/colorGrey"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium_xx" />


    <com.citizen.fmc.utils.ButtonView
        android:id="@+id/update_version_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/update"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_medium_xx"
        android:textStyle="bold"
        app:cornerRadius="@dimen/margin_2" />
</LinearLayout>