<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/EmailAdd"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_extra_small" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="@dimen/elevation_small"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:padding="@dimen/padding_medium"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/m_no"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_extra_small" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="@dimen/elevation_small"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/mobile_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/your_mob_num"
                android:inputType="phone"
                android:padding="@dimen/padding_medium"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/feedback_image"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_extra_small" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="@dimen/elevation_small"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/feedback_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/image_capture_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/image_capture_text"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/capture_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_add_a_photo_24dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/write_feedback1"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/text_size_extra_small" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="@dimen/elevation_small"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/feedback_edit_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/three_hundred_letters_text"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="300"
                android:padding="@dimen/padding_medium"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_size_small" />
        </androidx.cardview.widget.CardView>

        <com.citizen.fmc.utils.ButtonView
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:buttonColor="@color/colorDarkBlue"
            app:cornerRadius="@dimen/corner_radius_small" />
    </LinearLayout>
</ScrollView>