<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorLightWhite"
    app:cardCornerRadius="0dp"
    android:visibility="gone"
    app:cardElevation="@dimen/elevation_medium">

    <RadioGroup
        android:id="@+id/drawer_tab_layout_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/helpline_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_man"
            android:gravity="center"
            android:text="@string/bottom_nav_helpline"
            android:textColor="@drawable/tab_text_selector"
            android:textSize="@dimen/text_size_extra_small" />

        <RadioButton
            android:id="@+id/news_and_updates_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_paper"
            android:gravity="center"
            android:text="@string/bottom_nav_news_and_updates"
            android:textColor="@drawable/tab_text_selector"
            android:textSize="@dimen/text_size_extra_small" />

        <RadioButton
            android:id="@+id/logout_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_logout"
            android:gravity="center"
            android:text="@string/nav_logout"
            android:textColor="@drawable/tab_text_selector"
            android:textSize="@dimen/text_size_extra_small" />
    </RadioGroup>
</androidx.cardview.widget.CardView>